Pull request #2
